<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kanibalv.app.MainActivity" >
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_newUser"
        android:title="@string/action_newUser"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_newVehicle"
        android:title="@string/action_newVehicle"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_refreshUsers"
        android:title="@string/action_refreshUsers"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_refreshVehicles"
        android:title="@string/action_refreshVehicles"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_refreshRoutes"
        android:title="@string/action_refreshRoutes"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
